sam-internal/k8s-out/ord/ord-flowsnake_prod/flowsnake-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    ingress.kubernetes.io/auth-tls-secret: default/flowsnake-tls
    ingress.kubernetes.io/auth-tls-verify-client: optional
    ingress.kubernetes.io/auth-tls-verify-depth: "1"
    ingress.kubernetes.io/rewrite-target: /
  name: fleet-service-ingress
  namespace: flowsnake
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: flowsnake-fleet-service
          servicePort: 8080
        path: /flowsnake
